--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ MANIFEST
 output/
 /.vscode/
 upload.sh
+requirements.txt
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
