--- a/.gitignore
+++ b/.gitignore
@@ -75,7 +75,10 @@ instance/
 .scrapy
 
 # Sphinx documentation
-docs/_build/
+docs/*
+
+!docs/_build/
+docs/_build/doctrees
 
 # PyBuilder
 .pybuilder/
