--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -5,8 +5,8 @@ sphinx:
 
 build:
   os: ubuntu-22.04
-
-python:
-  version: 3.8
-  install:
-  - requirements : docs/requirements.txt
+  tools:
+    python:
+      version: 3.8
+      install:
+      - requirements : docs/requirements.txt
