--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -6,7 +6,9 @@ sphinx:
 build:
   os: ubuntu-22.04
   tools:
-    python:
-      version: 3.8
-      install:
-      - requirements : docs/requirements.txt
+    python: "3.8"
+
+python:
+  version: 3.8
+  install:
+  - requirements : docs/requirements.txt
